--- a/papers/energy_storage.bib
+++ b/papers/energy_storage.bib
@@ -2017,3 +2017,213 @@ The Avedøre Power Station was designed by the architects Claus Bjarrum and Jør
 	year = {2021},
 	doi = {10.5281/ZENODO.4603212}
 }
+
+@article{hassanpouryouzbandOffshoreGeologicalStorage2021,
+	title = {Offshore {Geological} {Storage} of {Hydrogen}: {Is} {This} {Our} {Best} {Option} to {Achieve} {Net}-{Zero}?},
+	shorttitle = {Offshore {Geological} {Storage} of {Hydrogen}},
+	url = {https://doi.org/10.1021/acsenergylett.1c00845},
+	doi = {10.1021/acsenergylett.1c00845},
+	urldate = {2021-05-18},
+	journal = {ACS Energy Letters},
+	author = {Hassanpouryouzband, Aliakbar and Joonaki, Edris and Edlmann, Katriona and Haszeldine, R. Stuart},
+	month = may,
+	year = {2021},
+	note = {Publisher: American Chemical Society},
+	pages = {2181--2186},
+	file = {ACS Full Text Snapshot:/home/ali/Zotero/storage/54Y73FQT/acsenergylett.html:text/html;Hassanpouryouzband et al_2021_Offshore Geological Storage of Hydrogen.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Hassanpouryouzband et al_2021_Offshore Geological Storage of Hydrogen.pdf:application/pdf}
+}
+
+@article{mansooriFuelsFutureRenewable2021,
+	title = {Fuels of the {Future} for {Renewable} {Energy} {Sources} ({Ammonia}, {Biofuels}, {Hydrogen})},
+	url = {http://arxiv.org/abs/2102.00439},
+	abstract = {Potential strategies for the development and large-scale application of renewable energy sources aimed at reducing the usage of carbon-based fossil fuels are assessed here, especially in the event of the abandonment of such fuels. The aim is to aid the initiative to reduce the harmful effects of carbon-based fossil fuels on the environment and ensure a reduction in greenhouse gases and sustainability of natural resources. Small-scale renewable energy application for heating, cooling, and electricity generation in households and commercial buildings are already underway around the world. Hydrogen (H2) and ammonia (NH3), which are presently produced using fossil fuels, already have significant applications in society and industry, and are therefore good candidates for large-scale production through the use of renewable energy sources. This will help to reduce the greenhouse gas emissions appreciably around the world. While the first-generation biofuels production using food crops may not be suitable for long-range fuel production, due to competition with the food supply, the 2nd, 3rd and 4th generation biofuels have the potential to produce large, worldwide supplies of fuels. Production of advanced biofuels will not increase the emission of greenhouse gases, and the ammonia produced through the use of renewable energy resources will serve as fertilizer for biofuels production. The perspective of renewable energy sources, such as technology status, economics, overall environmental benefits, obstacles for commercialization, relative competitiveness of various renewable energy sources, etc., are also discussed whenever applicable.},
+	urldate = {2021-03-31},
+	journal = {arXiv:2102.00439 [cond-mat, physics:physics]},
+	author = {Mansoori, G. Ali and Agyarko, L. Barnie and Estevez, L. Antonio and Fallahi, Behrooz and Gladyshev, Georgi and Santos, Ronaldo Gonçalves dos and Niaki, Shawn and Perišić, Ognjen and Sillanpää, Mika and Tumba, Kaniki and Yen, Jeffrey},
+	month = jan,
+	year = {2021},
+	note = {arXiv: 2102.00439},
+	keywords = {Condensed Matter - Other Condensed Matter, Physics - Applied Physics},
+	file = {arXiv.org Snapshot:/home/ali/Zotero/storage/TE869V4Y/2102.html:text/html;Mansoori et al_2021_Fuels of the Future for Renewable Energy Sources (Ammonia, Biofuels, Hydrogen).pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Mansoori et al_2021_Fuels of the Future for Renewable Energy Sources (Ammonia, Biofuels, Hydrogen).pdf:application/pdf}
+}
+
+@inproceedings{elmegaardEfficiencyCompressedAir2011,
+	title = {Efficiency of compressed air energy storage},
+	booktitle = {24th international conference on efficiency, cost, optimization, simulation and environmental impact of energy systems},
+	author = {Elmegaard, Brian and Brix, Wiebke},
+	year = {2011},
+	file = {Elmegaard_Brix_2011_Efficiency of compressed air energy storage.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Elmegaard_Brix_2011_Efficiency of compressed air energy storage.pdf:application/pdf}
+}
+
+@article{succarCompressedAirEnergy2008,
+	title = {Compressed air energy storage: theory, resources, and applications for wind power},
+	volume = {8},
+	shorttitle = {Compressed air energy storage},
+	journal = {Princeton environmental institute report},
+	author = {Succar, Samir and Williams, Robert H.},
+	year = {2008},
+	note = {Publisher: Citeseer},
+	pages = {81},
+	file = {Succar_Williams_2008_Compressed air energy storage.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Succar_Williams_2008_Compressed air energy storage.pdf:application/pdf}
+}
+
+@techreport{stottlemyrePreliminaryStabilityCriteria1978a,
+	title = {Preliminary stability criteria for compressed air energy storage in porous media reservoirs},
+	institution = {Battelle Pacific Northwest Labs., Richland, WA (USA)},
+	author = {Stottlemyre, J. A.},
+	year = {1978},
+	file = {Stottlemyre_1978_Preliminary stability criteria for compressed air energy storage in porous.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Stottlemyre_1978_Preliminary stability criteria for compressed air energy storage in porous2.pdf:application/pdf}
+}
+
+@article{sopherEvaluationSubsurfaceCompressed2019,
+	title = {Evaluation of the subsurface compressed air energy storage ({CAES}) potential on {Gotland}, {Sweden}},
+	volume = {78},
+	number = {6},
+	journal = {Environmental Earth Sciences},
+	author = {Sopher, Daniel and Juhlin, Christopher and Levendal, Tegan and Erlström, Mikael and Nilsson, Karl and Soares, José Pedro Da Silva},
+	year = {2019},
+	note = {Publisher: Springer},
+	pages = {1--17},
+	file = {Full Text:/home/ali/Zotero/storage/UHHE9HGK/s12665-019-8196-1.html:text/html}
+}
+
+@article{schaberUtilityscaleStorageRenewable2004,
+	title = {Utility-scale storage of renewable energy},
+	volume = {17},
+	number = {6},
+	journal = {The Electricity Journal},
+	author = {Schaber, Christopher and Mazza, Patrick and Hammerschlag, Roel},
+	year = {2004},
+	note = {Publisher: Elsevier},
+	pages = {21--29},
+	file = {Full Text:/home/ali/Zotero/storage/AWEJWF59/S1040619004000594.html:text/html}
+}
+
+@article{rajuModelingSimulationCompressed2012,
+	title = {Modeling and simulation of compressed air storage in caverns: a case study of the {Huntorf} plant},
+	volume = {89},
+	shorttitle = {Modeling and simulation of compressed air storage in caverns},
+	number = {1},
+	journal = {Applied Energy},
+	author = {Raju, Mandhapati and Khaitan, Siddhartha Kumar},
+	year = {2012},
+	note = {Publisher: Elsevier},
+	pages = {474--481},
+	file = {Full Text:/home/ali/Zotero/storage/H5RKUECP/S0306261911005150.html:text/html}
+}
+
+@article{oldenburgPorousMediaCompressedair2013,
+	title = {Porous media compressed-air energy storage ({PM}-{CAES}): {Theory} and simulation of the coupled wellbore–reservoir system},
+	volume = {97},
+	shorttitle = {Porous media compressed-air energy storage ({PM}-{CAES})},
+	number = {2},
+	journal = {Transport in porous media},
+	author = {Oldenburg, Curtis M. and Pan, Lehua},
+	year = {2013},
+	note = {Publisher: Springer},
+	pages = {201--221},
+	file = {Full Text:/home/ali/Zotero/storage/R3EN3XGQ/s11242-012-0118-6.html:text/html}
+}
+
+@article{nakhamkinAvailableCompressedAir2010,
+	title = {Available compressed air energy storage ({CAES}) plant concepts},
+	volume = {4100},
+	number = {0},
+	journal = {Energy},
+	author = {Nakhamkin, Michael and Chiruvolu, Madhukar and Daniel, C.},
+	year = {2010},
+	pages = {81},
+	file = {Nakhamkin et al_2010_Available compressed air energy storage (CAES) plant concepts.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Nakhamkin et al_2010_Available compressed air energy storage (CAES) plant concepts.pdf:application/pdf}
+}
+
+@article{luoModellingStudyEfficiency2016,
+	title = {Modelling study, efficiency analysis and optimisation of large-scale {Adiabatic} {Compressed} {Air} {Energy} {Storage} systems with low-temperature thermal storage},
+	volume = {162},
+	journal = {Applied Energy},
+	author = {Luo, Xing and Wang, Jihong and Krupke, Christopher and Wang, Yue and Sheng, Yong and Li, Jian and Xu, Yujie and Wang, Dan and Miao, Shihong and Chen, Haisheng},
+	year = {2016},
+	note = {Publisher: Elsevier},
+	pages = {589--600},
+	file = {Full Text:/home/ali/Zotero/storage/FCTYNU7R/S0306261915013185.html:text/html}
+}
+
+@article{luoOverviewCurrentDevelopment2015,
+	title = {Overview of current development in electrical energy storage technologies and the application potential in power system operation},
+	volume = {137},
+	journal = {Applied energy},
+	author = {Luo, Xing and Wang, Jihong and Dooner, Mark and Clarke, Jonathan},
+	year = {2015},
+	note = {Publisher: Elsevier},
+	pages = {511--536},
+	file = {Full Text:/home/ali/Zotero/storage/BUPGU4MK/S0306261914010290.html:text/html}
+}
+
+@article{kaldemeyerCompressedAirEnergy2016,
+	title = {Compressed air energy storage in the {German} energy system–status quo \& perspectives},
+	volume = {99},
+	journal = {Energy Procedia},
+	author = {Kaldemeyer, Cord and Boysen, Cynthia and Tuschy, Ilja},
+	year = {2016},
+	note = {Publisher: Elsevier},
+	pages = {298--313},
+	file = {Snapshot:/home/ali/Zotero/storage/PCEYZ8L3/S1876610216310815.html:text/html}
+}
+
+@article{jarvisFeasibilityStudyPorous2015,
+	title = {Feasibility study of porous media compressed air energy storage in {South} {Carolina}, {United} {States} of {America}},
+	author = {Jarvis, Alexandra-Selene},
+	year = {2015},
+	file = {Jarvis_2015_Feasibility study of porous media compressed air energy storage in South.pdf:C\:\\Users\\aliak\\Dropbox\\Zotero\\Jarvis_2015_Feasibility study of porous media compressed air energy storage in South.pdf:application/pdf}
+}
+
+@article{giramontiConceptualDesignCompressed1978,
+	title = {Conceptual design of compressed air energy storage electric power systems},
+	volume = {4},
+	number = {4},
+	journal = {Applied Energy},
+	author = {Giramonti, Albert J. and Lessard, Robert D. and Blecher, William A. and Smith, Edward B.},
+	year = {1978},
+	note = {Publisher: Elsevier},
+	pages = {231--249},
+	file = {Snapshot:/home/ali/Zotero/storage/2NJK2MPE/0306261978900235.html:text/html}
+}
+
+@article{chenProgressElectricalEnergy2009,
+	title = {Progress in electrical energy storage system: {A} critical review},
+	volume = {19},
+	shorttitle = {Progress in electrical energy storage system},
+	number = {3},
+	journal = {Progress in natural science},
+	author = {Chen, Haisheng and Cong, Thang Ngoc and Yang, Wei and Tan, Chunqing and Li, Yongliang and Ding, Yulong},
+	year = {2009},
+	note = {Publisher: Elsevier},
+	pages = {291--312},
+	file = {Full Text:/home/ali/Zotero/storage/7NWN7LQR/S100200710800381X.html:text/html}
+}
+
+@article{bartonEnergyStorageIts2004,
+	title = {Energy storage and its use with intermittent renewable energy},
+	volume = {19},
+	number = {2},
+	journal = {IEEE transactions on energy conversion},
+	author = {Barton, John P. and Infield, David G.},
+	year = {2004},
+	note = {Publisher: IEEE},
+	pages = {441--448},
+	file = {Snapshot:/home/ali/Zotero/storage/6GTI9PXT/1300713.html:text/html}
+}
+
+@article{hassanpouryouzbandOffshoreGeologicalStorage2021a,
+	title = {Offshore {Geological} {Storage} of {Hydrogen}: {Is} {This} {Our} {Best} {Option} to {Achieve} {Net}-{Zero}?},
+	shorttitle = {Offshore {Geological} {Storage} of {Hydrogen}},
+	url = {https://doi.org/10.1021/acsenergylett.1c00845},
+	doi = {10.1021/acsenergylett.1c00845},
+	urldate = {2021-05-24},
+	journal = {ACS Energy Letters},
+	author = {Hassanpouryouzband, Aliakbar and Joonaki, Edris and Edlmann, Katriona and Haszeldine, R. Stuart},
+	month = may,
+	year = {2021},
+	note = {Publisher: American Chemical Society},
+	pages = {2181--2186},
+	file = {Hassanpouryouzband et al_2021_Offshore Geological Storage of Hydrogen.pdf:/home/ali/Dropbox/Zotero/Hassanpouryouzband et al_2021_Offshore Geological Storage of Hydrogen2.pdf:application/pdf}
+}
